Update package.json author and repository

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "enable-navigation-icons",
   "version": "0.1.0",
   "description": "Easily add icons to Navigation Block items.",
-  "author": "Nick Diego",
+  "author": "Trent Stromkins",
   "license": "GPL-2.0-or-later",
   "repository": {
     "type": "git",
-    "url": "git://github.com/ndiego/enable-navigation-icons.git"
+    "url": "git://github.com/bmx269/enable-navigation-icons.git"
   },
   "scripts": {
     "build": "wp-scripts build",
