--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,19 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Exclude dev files from git archive / distribution
+/.claude             export-ignore
+/.github             export-ignore
+/.wordpress-org      export-ignore
+/node_modules        export-ignore
+/src                 export-ignore
+.distignore          export-ignore
+.editorconfig        export-ignore
+.gitattributes       export-ignore
+.gitignore           export-ignore
+CLAUDE.md            export-ignore
+README.md            export-ignore
+deploy.sh            export-ignore
+package.json         export-ignore
+package-lock.json    export-ignore
+webpack.config.js    export-ignore
