--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-# Compiled source #
-###################
+# Build output
+build/
+
+# Dependencies
+node_modules/
+vendor/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Compiled source
 *.com
 *.class
 *.dll
@@ -7,10 +22,7 @@
 *.o
 *.so
 
-# Packages #
-############
-# It's better to unpack these files and commit the raw source
-# git has its own built in compression methods.
+# Packages
 *.7z
 *.dmg
 *.gz
@@ -20,28 +32,11 @@
 *.tar
 *.zip
 
-# Logs and databases #
-######################
+# Local settings
+.claude/settings.local.json
+
+# Logs and databases
 logs
 *.log
 *.sql
 *.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# NPM #
-#######
-node_modules/
-
-# Composer #
-############
-vendor/
-wordpress-org-submission
